--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/WXOiRue.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -236,7 +236,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/WXOiRue.jpg">
         </div>
       </div>
 
