--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1</h3> <p>backers</p>
+                <h3>0</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$10</h3> <p>of $100,000,000</p>
+                  <h3>$0</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>4</h3> <p>days left</p>
+                <h3>60</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -204,7 +204,9 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            qdqwdwq qdqwd qwqwd qedeqd qdqdwdwdqwdwqdqwdssadad adsdasdasdasdsadsadsadsadadasdasdqwdqfqwfrqrqeqasdsadsafqewfqfqwrwqasdsadqwdwqdwqdwqas
+qdqwdwqdwqdqw
+qdqwdqwdqwdwqdqw qweqw qwewqeqwewqeqwe            
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
             fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
