--- a/index.html
+++ b/index.html
@@ -205,7 +205,11 @@
         <div class="span5 copy">
           <p>
             Place holder text. Still need to come up with a bitstarter idea. blah blah blah blah blah blah blah blah blah blah blah blah blah.
-            blah blah blah.
+            blah blah blah. Maybe food delivery service that sends a retaurant your order, picks it up, and delivers it. This would be a service
+            for restaurants that do not have a delivery service of their own. Or maybe something involved with the medical field. Personalized human
+            genome mapping, with analysis and interactivity to map out known genes and what they affect (eye color, risk for certain cancer, etc).
+            Maybe something with maps/GPS. A crowdbased application that helps map out dog friendly parks, hiking trials, or just areas in general.
+            Lists amenities such as water fountains, dog waste bags, on/off leash, etc.
           </p>
         </div>
       </div>
@@ -213,17 +217,8 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            More text, dive deeper into the actual idea. Reasons why the reader should be interested. How it will change their lives. Look into logistics,
+            what the initial investment will be used towards. What the incentives for supporting the project is. When to expect a working product.
           </p>
         </div>
         <div class="span5 asset">
@@ -242,12 +237,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    Why don't you have an actual idea yet?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    Haven't come up with an idea that I am truly happy with.
                   </div>
                 </div>
               </div>
@@ -255,12 +250,25 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+                    What's with all these placeholders?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    Just playing around with the skeleton and trying to get something in for at least the homework due date.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseThree">
+                    What is Fake Block?
+                  </a>
+                </div>
+                <div id="collapseThree" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Arrested Development Season 4 reference.
                   </div>
                 </div>
               </div>
